--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^4.79.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "recharts": "^2.12.2"
   },
   "devDependencies": {
